--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <a href="#0" class="butn butn-bg mt-30">
                                     <span>Download C.V</span>
                                 </a>
-                                <div class="social">
+                                <div class="social my-5 my-md-0">
                                     <a href="https://www.linkedin.com/in/jahongirdev" class="icon" target="_blank">
                                         <i class="fab fa-linkedin"></i>
                                     </a>
