--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx" class="no-js">
+<html lang="en" class="no-js">
 
 <head>
     <!-- META TAGS -->
@@ -10,7 +10,29 @@
     <meta name="description" content="Front End Web Developer Portfolio" />
     <meta name="author" content="cyberj0hn" />
     <title>Jahongir Murodboev - Front End Web Developer</title>
+    <meta name="description" content="Front End Web Developer Portfolio" />
+    <meta itemprop="image" size="1024x512" content="img/banner-img.png" />
+    <meta name="author" content="Jahongir Murodboev" />
+    <meta name="language" content="English" />
     <link rel="shortcut icon" href="img/icon.png" type="icon/png" />
+    <link rel="icon" type="image/png" href="img/icon.png" />
+    <link rel="apple-touch-icon" href="img/icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <link rel="alternate" href="https://jahongirdev.github.io/" hreflang="x-default" />
+    <meta name="theme-color" content="#12141C" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jahongirdev.github.io/" />
+    <meta property="og:title" content="Jahongir Murodboev - Front End Web Developer" />
+    <meta property="og:image" content="img/banner-img.png" />
+    <meta property="og:description" content="Front End Web Developer Portfolio" />
+    <meta property="og:site_name" content="Jahongir Murodboev - Front End Web Developer" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Jahongir Murodboev - Front End Web Developer" />
+    <meta name="twitter:description" content="Front End Web Developer Portfolio" />
+    <meta name="twitter:image" size="1024x512" content="img/banner-img.png" />
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700,800" rel="stylesheet">
