--- a/index.html
+++ b/index.html
@@ -633,6 +633,25 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="items col-md-6">
+                                    <div class="item-img">
+                                        <a href="https://mozilor.netlify.app/" target="_blank">
+                                            <img src="img/portfolio-img15.png" alt="image">
+                                            <div class="item-img-overlay">
+                                                <div class="overlay-info full-width">
+                                                    <div class="des">
+                                                        <p>Front End</p>
+                                                        <h6>Mozilor Website</h6>
+                                                    </div>
+                                                    <a href="img/portfolio-img15.png" class="popimg">
+                                                        <span class="icon"><i
+                                                                class="fas fa-long-arrow-alt-right"></i></span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
