Add more projects to portfolio

--- a/index.html
+++ b/index.html
@@ -652,6 +652,63 @@
                                         </a>
                                     </div>
                                 </div>
+                                <div class="items col-md-6">
+                                    <div class="item-img">
+                                        <a href="https://realestatecompany-web.netlify.app/" target="_blank">
+                                            <img src="img/portfolio-img16.png" alt="image">
+                                            <div class="item-img-overlay">
+                                                <div class="overlay-info full-width">
+                                                    <div class="des">
+                                                        <p>Front End</p>
+                                                        <h6>Real Estate Company Website</h6>
+                                                    </div>
+                                                    <a href="img/portfolio-img16.png" class="popimg">
+                                                        <span class="icon"><i
+                                                                class="fas fa-long-arrow-alt-right"></i></span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="items col-md-6">
+                                    <div class="item-img">
+                                        <a href="https://castaway-web.netlify.app/" target="_blank">
+                                            <img src="img/portfolio-img17.png" alt="image">
+                                            <div class="item-img-overlay">
+                                                <div class="overlay-info full-width">
+                                                    <div class="des">
+                                                        <p>Front End</p>
+                                                        <h6>Castaway Website</h6>
+                                                    </div>
+                                                    <a href="img/portfolio-img17.png" class="popimg">
+                                                        <span class="icon"><i
+                                                                class="fas fa-long-arrow-alt-right"></i></span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="items col-md-6">
+                                    <div class="item-img">
+                                        <a href="https://koin-web.netlify.app/" target="_blank">
+                                            <img src="img/portfolio-img18.png" alt="image">
+                                            <div class="item-img-overlay">
+                                                <div class="overlay-info full-width">
+                                                    <div class="des">
+                                                        <p>Front End</p>
+                                                        <h6>Koin Landing Page</h6>
+                                                    </div>
+                                                    <a href="img/portfolio-img18.png" class="popimg">
+                                                        <span class="icon"><i
+                                                                class="fas fa-long-arrow-alt-right"></i></span>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
